syntax = "proto3";

package nexusflow.project.v1;

option go_package = "github.com/nexusflow/nexusflow/pkg/proto/project/v1;projectv1";

import "google/protobuf/timestamp.proto";
import "proto/common/v1/common.proto";
import "google/api/annotations.proto";

// Project entity
message Project {
  string id = 1;
  string organization_id = 2;
  string key = 3;                     // Unique project key (e.g., "PROJ")
  string name = 4;
  string description = 5;
  string avatar_url = 6;
  ProjectType type = 7;
  ProjectStatus status = 8;
  string lead_id = 9;
  repeated string member_ids = 10;
  map<string, string> settings = 11;
  google.protobuf.Timestamp created_at = 12;
  google.protobuf.Timestamp updated_at = 13;
}

// Project type
enum ProjectType {
  PROJECT_TYPE_UNSPECIFIED = 0;
  PROJECT_TYPE_KANBAN = 1;
  PROJECT_TYPE_SCRUM = 2;
  PROJECT_TYPE_BUG_TRACKING = 3;
}

// Project status
enum ProjectStatus {
  PROJECT_STATUS_UNSPECIFIED = 0;
  PROJECT_STATUS_ACTIVE = 1;
  PROJECT_STATUS_ARCHIVED = 2;
  PROJECT_STATUS_DELETED = 3;
}

// Project member
message ProjectMember {
  string id = 1;
  string project_id = 2;
  string user_id = 3;
  ProjectRole role = 4;
  google.protobuf.Timestamp joined_at = 5;
}

// Project role
enum ProjectRole {
  PROJECT_ROLE_UNSPECIFIED = 0;
  PROJECT_ROLE_ADMIN = 1;
  PROJECT_ROLE_MEMBER = 2;
  PROJECT_ROLE_VIEWER = 3;
}

// Project service
service ProjectService {
  // Project management
  rpc CreateProject(CreateProjectRequest) returns (CreateProjectResponse) {
    option (google.api.http) = {
      post: "/v1/projects"
      body: "*"
    };
  }
  rpc GetProject(GetProjectRequest) returns (GetProjectResponse) {
    option (google.api.http) = {
      get: "/v1/projects/{id}"
    };
  }
  rpc GetProjectByKey(GetProjectByKeyRequest) returns (GetProjectByKeyResponse) {
    option (google.api.http) = {
      get: "/v1/projects/key/{key}"
    };
  }
  rpc UpdateProject(UpdateProjectRequest) returns (UpdateProjectResponse) {
    option (google.api.http) = {
      patch: "/v1/projects/{id}"
      body: "*"
    };
  }
  rpc DeleteProject(DeleteProjectRequest) returns (DeleteProjectResponse) {
    option (google.api.http) = {
      delete: "/v1/projects/{id}"
    };
  }
  rpc ListProjects(ListProjectsRequest) returns (ListProjectsResponse) {
    option (google.api.http) = {
      get: "/v1/projects"
    };
  }
  rpc ArchiveProject(ArchiveProjectRequest) returns (ArchiveProjectResponse) {
    option (google.api.http) = {
      post: "/v1/projects/{id}/archive"
      body: "*"
    };
  }
  
  // Member management
  rpc AddMember(AddMemberRequest) returns (AddMemberResponse) {
    option (google.api.http) = {
      post: "/v1/projects/{project_id}/members"
      body: "*"
    };
  }
  rpc RemoveMember(RemoveMemberRequest) returns (RemoveMemberResponse) {
    option (google.api.http) = {
      delete: "/v1/projects/{project_id}/members/{user_id}"
    };
  }
  rpc UpdateMemberRole(UpdateMemberRoleRequest) returns (UpdateMemberRoleResponse) {
    option (google.api.http) = {
      patch: "/v1/projects/{project_id}/members/{user_id}"
      body: "*"
    };
  }
  rpc ListMembers(ListMembersRequest) returns (ListMembersResponse) {
    option (google.api.http) = {
      get: "/v1/projects/{project_id}/members"
    };
  }
}

// Request/Response messages

message CreateProjectRequest {
  string organization_id = 1;
  string key = 2;
  string name = 3;
  string description = 4;
  ProjectType type = 5;
  string lead_id = 6;
}

message CreateProjectResponse {
  Project project = 1;
}

message GetProjectRequest {
  string id = 1;
}

message GetProjectResponse {
  Project project = 1;
}

message GetProjectByKeyRequest {
  string key = 1;
  string organization_id = 2;
}

message GetProjectByKeyResponse {
  Project project = 1;
}

message UpdateProjectRequest {
  string id = 1;
  optional string name = 2;
  optional string description = 3;
  optional string avatar_url = 4;
  optional string lead_id = 5;
  map<string, string> settings = 6;
}

message UpdateProjectResponse {
  Project project = 1;
}

message DeleteProjectRequest {
  string id = 1;
}

message DeleteProjectResponse {
  nexusflow.common.v1.SuccessResponse response = 1;
}

message ListProjectsRequest {
  string organization_id = 1;
  nexusflow.common.v1.PaginationRequest pagination = 2;
  ProjectStatus status = 3;
  ProjectType type = 4;
}

message ListProjectsResponse {
  repeated Project projects = 1;
  nexusflow.common.v1.PaginationResponse pagination = 2;
}

message ArchiveProjectRequest {
  string id = 1;
}

message ArchiveProjectResponse {
  Project project = 1;
}

message AddMemberRequest {
  string project_id = 1;
  string user_id = 2;
  ProjectRole role = 3;
}

message AddMemberResponse {
  ProjectMember member = 1;
}

message RemoveMemberRequest {
  string project_id = 1;
  string user_id = 2;
}

message RemoveMemberResponse {
  nexusflow.common.v1.SuccessResponse response = 1;
}

message UpdateMemberRoleRequest {
  string project_id = 1;
  string user_id = 2;
  ProjectRole role = 3;
}

message UpdateMemberRoleResponse {
  ProjectMember member = 1;
}

message ListMembersRequest {
  string project_id = 1;
  nexusflow.common.v1.PaginationRequest pagination = 2;
}

message ListMembersResponse {
  repeated ProjectMember members = 1;
  nexusflow.common.v1.PaginationResponse pagination = 2;
}
